--- a/page2.html
+++ b/page2.html
@@ -20,7 +20,7 @@
 			to the front of them. The fact that they can jump and box and disembowl their prey with their razor sharp toenails makes them all the more lovable.</p>
 			<h2>2. They're so cute</h2>
 			<img src="Images/pic2.jpg" alt="Kangaroo">
-			<p>I personally find kangaroos to be one of the cutest mammals in the mammal kingdom &#40 just nearly being beat out by blue whales &#41.
+			<p>I personally find kangaroos to be one of the cutest mammals in the mammal kingdom (just nearly being beat out by blue whales).
 			I view my desire to own a kangaroo as comparable to a person's desire to own a cute dog. Sure, dogs are domesticated and generally aren't deadly,
 			but that doesn't mean I shouldn't at least be able to try and domesticate a kangaroo. How did we domesticate dogs? We befriended wolves! And wolves
 			are far deadlier than kangaroos, so domesticating kangaroos is a no-brainer.</p>
