--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 			<h2>Educational History</h2>
 			<p><strong>K-12:</strong> Helen C. Peirce of International Studies</p>
 			<p><strong>High School:</strong> Jones College Prep</p>
-			<p><strong>College: </strong>TBD</p>
+			<p><strong>College: </strong>Illinois Institute of Technology</p>
 			<h2>Job History</h2>
 			<p><strong>Dishwasher at A Taste of Heaven</strong></p>
 			<p>Between my Junior and Senior years of High School, I had a summer job at a local bakery called 
@@ -27,8 +27,10 @@
 			a given website's internal and external links and got a response code from each one. If the response code read anything other than
 			200, the program would email a given email with text that read: "Link:______website link_______ has a response code of _response code__"</p>
 			<h2>Skills</h2>
-			<p>I learned Java through taking AP Computer Science A at my high school. I learned python in my own time with Code Academy, though I could use more
-			practice. I am proficient in Math, and am currently enrolled in a Multivariable Calculus course at my school.</p>
+			<ul>
+					<li>Experience coding in Java</li>
+					<li>Experience coding in Python</li>
+			</ul>
 			<h2>Career Aspirations</h2>
 			<p>In college, I plan majoring in Computer Science and earning a Master's or higher in Artificial Intelligence/Machine Learning. 
 			The ultimate career goal is to advance the field of artificial intelligence either through research or creating actual user applications. One of the
