--- a/index.html
+++ b/index.html
@@ -12,20 +12,18 @@
             				</ul>
         		</nav>
 			<h1>Samuel Hoppenworth</h1>
-			<h2>Educational History</h2>
-			<p><strong>K-12:</strong> Helen C. Peirce of International Studies</p>
+			<h2>Contact Information</h2>
+			<p><strong>Phone:</strong> (312)-934-8900</p>
+			<p><strong>School Email:</strong> shoppenworth@hawk.iit.edu</p>
+			<p><strong>Personal Email:</strong> samuelhoppenworth@gmail.com</p>
+			<h2>Education History</h2>
+			<p><strong>K-8:</strong> Helen C. Peirce of International Studies</p>
 			<p><strong>High School:</strong> Jones College Prep</p>
 			<p><strong>College: </strong>Illinois Institute of Technology</p>
 			<h2>Job History</h2>
-			<p><strong>Dishwasher at A Taste of Heaven</strong></p>
-			<p>Between my Junior and Senior years of High School, I had a summer job at a local bakery called 
-			A Taste of Heaven. There, I served as a dishwasher and earned $18 an hour. I had an overall positive experience working there, but had to end my 
-			employment there to focus on school. </p>
-			<p><strong>Computer Science Internship</strong></p>
-			<p>For two weeks over the summer, I had a internship with Veritread LLC, an industrial machinery shipping company. 
-			I shawdowed developer meetings and completed a web-monitoring python project. The program I created perdioically crawled through
-			a given website's internal and external links and got a response code from each one. If the response code read anything other than
-			200, the program would email a given email with text that read: "Link:______website link_______ has a response code of _response code__"</p>
+			<ul>
+					<li>Dishwasher at A Taste of Heaven</li>
+					<li>Paid Internship at Veritread LLC</li>
 			<h2>Skills</h2>
 			<ul>
 					<li>Experience coding in Java</li>
@@ -37,9 +35,7 @@
 			ways I've pursued this interest in AI was participating in a program called Inspirit AI. Through the two week program, I was introduced
 			to the various sub-sections of AI, including Machine Learning, Neural Networks, NLP, etc. I've also been working on creating a playable chess engine
 			through the help of a YouTube tutorial series. </p>
-			<h2>Contact Information</h2>
-			<p><strong>Phone:</strong> (312)-934-8900</p>
-			<p><strong>School Email:</strong> shoppenworth@hawk.iit.edu</p>
-			<p><strong>Personal Email:</strong> samuelhoppenworth@gmail.com</p>
+			
+			
     	</body>
 </html>
