--- a/page2.html
+++ b/page2.html
@@ -1,25 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>page2</title>
-    </head>
-    <body>
-        <nav>
-            <ul>	
-                <!--change links later-->
-                <li><a href="index.html">Page 1</a></li>
-                <li><a href="page2.html">Page 2</a></li>
-                <li><a href="page3.html">Page 3</a></li>
-            </ul>
-        </nav>
-        <h1>7 Reasons I Should Be Given a Kangaroo</h1>
-        
+    	<head>
+        		<title>page2</title>
+    	</head>
+    	<body>
+        		<nav>
+            				<ul>	
+							<li><a href="index.html">Page 1</a></li>
+							<li><a href="page2.html">Page 2</a></li>
+							<li><a href="page3.html">Page 3</a></li>
+					</ul>
+			</nav>
+			<h1>7 Reasons I Should Be Given a Kangaroo</h1>
 			<h2>1. I love kangaroos</h2>
 			<p>This goes without saying. If I didn't love kangaroos, then why would I create this list of 7 Reasons Why I Should be Given a Kangaroo?
 			I love kangaroos because they're so funny looking. Their pouches make them look like those parents that have baby harnesses strapped
 			to the front of them. The fact that they can jump and box and disembowl their prey with their razor sharp toenails makes them all the more lovable.</p>
 			<h2>2. They're so cute</h2>
-			<img src="Images/pic2.jpg" alt="Kangaroo">
+			<img src="Images/pic2.jpg" alt="Kangaroo" width="100" height="100">
 			<p>I personally find kangaroos to be one of the cutest mammals in the mammal kingdom (just nearly being beat out by blue whales).
 			I view my desire to own a kangaroo as comparable to a person's desire to own a cute dog. Sure, dogs are domesticated and generally aren't deadly,
 			but that doesn't mean I shouldn't at least be able to try and domesticate a kangaroo. How did we domesticate dogs? We befriended wolves! And wolves
@@ -40,9 +38,9 @@
 			<p>I anticipate that this will make communication with the animal far easier than if I had an American accent or even a mediocre English accent. 
 			Communication is vital in any relationship, regardless of its nature, so my ability to effectively convey my emotions and thoughts to 
 			this kangaroo through an Australian accent only proves that I am ready to embark on the wild journey that is befriending a kangaroo. </p>
-        	<audio controls>
-  				<source src="Images/rec1.mp3" type="audio/mpeg">
-            </audio>
+			<audio controls>
+					<source src="Images/rec1.mp3" type="audio/mpeg">
+			</audio>
 			<h2>6. I think I could handle a kangaroo</h2>
 			<p>If the kangaroo ever decided to get violent, I could effectively handle and subdue the beast. I am aware that kangaroos are notorious
 			for conducting themselves in a menacing manner, specifically their tendancy to balance on their tails and disembowl their prey with their razor sharp
@@ -50,7 +48,7 @@
 			arms to its sides. I would then walk it over to its room and close the door with kangaroo-proof doorknobs on it on it.</p>
 			<h2>7. I already have a contact within the Lincoln Park Zoo who is open to negotiations</h2>
 			<p>I cannot discuss the details at this point, but I am cautiously-optimistic that a deal can be reached. </p>
-        <img src="Images/pic3.jpg" alt= "Lincoln Park Zoo">
-     
-    </body>
+			<img src="Images/pic3.jpg" alt= "Lincoln Park Zoo" width="100" height="100">
+
+    	</body>
 </html>
