--- a/page2.html
+++ b/page2.html
@@ -6,9 +6,9 @@
     	<body>
         		<nav>
             				<ul>	
-							<li><a href="index.html">Page 1</a></li>
-							<li><a href="page2.html">Page 2</a></li>
-							<li><a href="page3.html">Page 3</a></li>
+							<li><a href="index.html">Resume</a></li>
+							<li><a href="page2.html">7 Reasons Why I should be Given a Kangaroo</a></li>
+							<li><a href="page3.html">7 Reasons Why I should NOT be Given a Kangaroo</a></li>
 					</ul>
 			</nav>
 			<h1>7 Reasons I Should Be Given a Kangaroo</h1>
