--- a/page3.html
+++ b/page3.html
@@ -1,19 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <title>page3</title>
-    </head>
-    <body>
-        <nav>
-            <ul>	
-                <!--change links later-->
-                <li><a href="index.html">Page 1</a></li>
-                <li><a href="page2.html">Page 2</a></li>
-                <li><a href="page3.html">Page 3</a></li>
-            </ul>
-        </nav>
-        <h1>7 Reasons I Should NOT Be Given a Kangaroo</h1>
-		
+	    <head>
+			<title>page3</title>
+	    </head>
+	    <body>
+			<nav>
+				    <ul>	
+						<!--change links later-->
+						<li><a href="index.html">Page 1</a></li>
+						<li><a href="page2.html">Page 2</a></li>
+						<li><a href="page3.html">Page 3</a></li>
+				    </ul>
+			</nav>
+			<h1>7 Reasons I Should NOT Be Given a Kangaroo</h1>
 			<h2>1. I have no self control</h2>
 			<p>I mean it. I have possess a zero amount of self control. Hell, yestarday I bought a $30 burger because the name listed on the menu was 
 			"Burgerlicious Buns." Important note: I'm vegan. Well, as of one week ago I'm vegan, and that's only because I joined a vegan pledge 
@@ -22,10 +21,9 @@
 			<h2>2. I am servely irresponsible</h2>
 			<p>I do not know where my housekeys are. I lost them a while back and have just been climbing through a window in the back that I keep unlocked. If I can't take care of my keys, how will I be able to take care of a kangaroo. They're like, harder to take care of than keys, is what my point is, I guess.</p>
 			<h2>3. I do not know how to care for a kangaroo</h2>
-        	<p>I do not have the patience to research how to effectively care for a kangaroo. I am sure there are many dietary and enviornmental needs that I would have to be aware of in order to properly care for a kangaroo, but I simply would not want to put in the effort to accomidate those needs.</p>
-			
+			<p>I do not have the patience to research how to effectively care for a kangaroo. I am sure there are many dietary and enviornmental needs that I would have to be aware of in order to properly care for a kangaroo, but I simply would not want to put in the effort to accomidate those needs.</p>
 			<h2>4. I do not have the resources to care for a kangaroo</h2>
-        	<p>The amount of space that I can currently claim as my own is about the size of large closet. The amount of money I can claim as my own
+			<p>The amount of space that I can currently claim as my own is about the size of large closet. The amount of money I can claim as my own
 			is the amount I could earn from renting out my large closet space to my Uncle Steve. (That's just a little family joke. It's funny because
 			Uncle Steve is dead.) </p>
 			<h2>5. I have two cats that likely will not like kangaroo</h2>
@@ -34,11 +32,9 @@
 			<h2>6. I could not beat a kangaroo in a fight</h2>
 			<p>Upon further research, I have come to the conclusion that I could NOT beat a kangaroo in a fight should I ever find myself in the wake of an angry
 			Joey Gordon-Levitt (that's what I would name the kangaroo if I received one).</p>
-        
-        <img src="Images/pic1.jpg" alt= "Joseph Gordon-Levitt">
-        <p>(Joseph Gordon-Levitt for reference)</p>
+			<img src="Images/pic1.jpg" alt= "Joseph Gordon-Levitt" width="100" height="100">
+			<p>(Joseph Gordon-Levitt for reference)</p>
 			<h2>7. I am beginning to suspect that my contact within the Lincoln Park Zoo system is a member of the Animal Trafficking Division of the FBI</h2>
 			<p>Thank goodness this entire site is encrypted. I think. </p>
-	
-    </body>
+	    </body>
 </html>
