--- a/index.html
+++ b/index.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     	<head>
-        		<title>Index</title>
+        		<title>Resume</title>
     	</head>
     	<body>
         		<nav>
             				<ul>	
-                					<li><a href="index.html">Page 1</a></li>
-                					<li><a href="page2.html">Page 2</a></li>
-                					<li><a href="page3.html">Page 3</a></li>
+                					<li><a href="index.html">Resume</a></li>
+                					<li><a href="page2.html">7 Reasons I Should be Given a Kangaroo</a></li>
+                					<li><a href="page3.html">7 Reasons I Should NOT be Given a Kangaroo</a></li>
             				</ul>
         		</nav>
 			<h1>Samuel Hoppenworth</h1>
