--- a/page3.html
+++ b/page3.html
@@ -7,8 +7,8 @@
 			<nav>
 				    <ul>	
 						<li><a href="index.html">Resume</a></li>
-						<li><a href="page2.html">7 Reasons I Should be Given a Kangaroo</a></li>
-						<li><a href="page3.html">7 Reasons I Should NOT be Given a Kangaroo</a></li>
+						<li><a href="page2.html">7 Reasons Why I Should be Given a Kangaroo</a></li>
+						<li><a href="page3.html">7 Reasons Why I Should NOT be Given a Kangaroo</a></li>
 				    </ul>
 			</nav>
 			<h1>7 Reasons I Should NOT Be Given a Kangaroo</h1>
@@ -31,7 +31,7 @@
 			<h2>6. I could not beat a kangaroo in a fight</h2>
 			<p>Upon further research, I have come to the conclusion that I could NOT beat a kangaroo in a fight should I ever find myself in the wake of an angry
 			Joey Gordon-Levitt (that's what I would name the kangaroo if I received one).</p>
-			<img src="Images/pic1.jpg" alt= "Joseph Gordon-Levitt" width="100" height="100">
+			<img src="Images/pic1.jpg" alt= "Joseph Gordon-Levitt" width="300" height="300">
 			<p>(Joseph Gordon-Levitt for reference)</p>
 			<h2>7. I am beginning to suspect that my contact within the Lincoln Park Zoo system is a member of the Animal Trafficking Division of the FBI</h2>
 			<p>Thank goodness this entire site is encrypted. I think. </p>
