--- a/page2.html
+++ b/page2.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
     	<head>
-        		<title>page2</title>
+        		<title>7 Reasons I should be Given a Kangaroo</title>
     	</head>
     	<body>
         		<nav>
             				<ul>	
 							<li><a href="index.html">Resume</a></li>
-							<li><a href="page2.html">7 Reasons Why I should be Given a Kangaroo</a></li>
-							<li><a href="page3.html">7 Reasons Why I should NOT be Given a Kangaroo</a></li>
+							<li><a href="page2.html">7 Reasons I should be Given a Kangaroo</a></li>
+							<li><a href="page3.html">7 Reasons I should NOT be Given a Kangaroo</a></li>
 					</ul>
 			</nav>
 			<h1>7 Reasons I Should Be Given a Kangaroo</h1>
