--- a/page3.html
+++ b/page3.html
@@ -7,8 +7,8 @@
 			<nav>
 				    <ul>	
 						<li><a href="index.html">Resume</a></li>
-						<li><a href="page2.html">7 Reasons Why I Should be Given a Kangaroo</a></li>
-						<li><a href="page3.html">7 Reasons Why I Should NOT be Given a Kangaroo</a></li>
+						<li><a href="page2.html">7 Reasons I Should be Given a Kangaroo</a></li>
+						<li><a href="page3.html">7 Reasons I Should NOT be Given a Kangaroo</a></li>
 				    </ul>
 			</nav>
 			<h1>7 Reasons I Should NOT Be Given a Kangaroo</h1>
