--- a/page3.html
+++ b/page3.html
@@ -31,7 +31,7 @@
 			<h2>6. I could not beat a kangaroo in a fight</h2>
 			<p>Upon further research, I have come to the conclusion that I could NOT beat a kangaroo in a fight should I ever find myself in the wake of an angry
 			Joey Gordon-Levitt (that's what I would name the kangaroo if I received one).</p>
-			<img src="Images/pic1.jpg" alt= "Joseph Gordon-Levitt" width="300" height="300">
+			<img src="Images/guy.jpg" alt= "Joseph Gordon-Levitt">
 			<p>(Joseph Gordon-Levitt for reference)</p>
 			<h2>7. I am beginning to suspect that my contact within the Lincoln Park Zoo system is a member of the Animal Trafficking Division of the FBI</h2>
 			<p>Thank goodness this entire site is encrypted. I think. </p>
